# B2C-marketplace

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  mypy.ini  pyproject.toml
backend/e_commerce/: .coveragerc  manage.py  schema.yaml  schema.yml
backend/e_commerce/admin/: authentication.py  managers.py  models.py  roles.py
backend/e_commerce/admin_user/: authentication.py  managers.py  models.py
backend/e_commerce/e_commerce/: settings.py  urls.py  validators.py
backend/e_commerce/ecom_admin/: __init__.py  admin.py  admin_views.py  apps.py  authentication.py  managers.py  middleware.py  models.py  urls.py
backend/e_commerce/ecom_admin/jwt/: serializers.py  views.py
backend/e_commerce/ecom_admin/migrations/: 0001_initial.py
backend/e_commerce/ecom_admin/tests/: test_auth.py
backend/e_commerce/ecom_core/: asgi.py  celery.py  ipgs.py  permissions.py  settings.py  urls.py  validators.py  wsgi.py
backend/e_commerce/ecom_core/exceptions/: handlers.py
backend/e_commerce/ecom_user/: apps.py  authentication.py  exceptions.py  managers.py  models.py  permissions.py  serializers.py  sms.py  sms_service.py  tasks.py  tests.py  throttle.py  urls.py  utils.py  views.py
backend/e_commerce/ecom_user/jwt/: serializers.py
backend/e_commerce/ecom_user/migrations/: 0001_initial.py  0002_ecomuser_profile_picture.py  0003_alter_ecomuser_phone.py
backend/e_commerce/ecom_user/models/: core.py  customer.py  seller.py
backend/e_commerce/ecom_user/tests/: test_api.py  test_jwt.py  test_model.py
backend/e_commerce/ecom_user_profile/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py  wallet_services.py
backend/e_commerce/ecom_user_profile/migrations/: 0001_initial.py  0002_sellerprofile_minimum_order_amount_bankcard_and_more.py  0003_remove_customerprofile_profile_picture_and_more.py  0004_sellerprofile_store_image.py  0005_remove_sellerprofile_rating.py  0006_alter_sellerprofile_store_name.py  0007_alter_sellerprofile_store_name.py
backend/e_commerce/ecom_user_profile/tests/: profile_factory.py  test_api.py  test_models.py
backend/e_commerce/feedback/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/e_commerce/feedback/migrations/: 0001_initial.py  0002_productcomment_created_on_productcomment_updated_on_and_more.py  0003_rename_created_on_productcomment_created_at_and_more.py  0004_alter_productreview_product_and_more.py  0005_alter_productreview_order_sellerreview.py  0006_sellerreview_rating.py  0007_alter_productreview_order.py
backend/e_commerce/feedback/tests/: feedback_factory.py  test_api.py  test_serializers.py
backend/e_commerce/financeops/: apps.py  models.py
backend/e_commerce/financeops/migrations/: 0001_initial.py  0002_initial.py  0002_rename_user_payment_paid_by.py  0003_alter_payment_ipg_service_alter_payment_track_id.py  0003_remove_payment_track_id_time_and_more.py  0004_alter_payment_ipg_service.py
backend/e_commerce/financeops/tests/: finance_factory.py
backend/e_commerce/order/: models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  urls.py  utils.py  variant_validators.py  views.py
backend/e_commerce/order/exceptions/: errors.py  handlers.py
backend/e_commerce/order/migrations/: 0001_initial.py  0002_alter_orderitem_product_variant.py  0002_order_tracking_code.py  0003_alter_cart_user_alter_order_customer_address_and_more.py  0004_alter_cart_user.py
backend/e_commerce/order/payment/: clients.py  exceptions.py  factory.py  schemas.py
backend/e_commerce/order/services/: cart.py  management.py  order.py  payment.py  schemas.py  validators.py
backend/e_commerce/order/tests/: conftest.py  order_factory.py  (+3 more)
backend/e_commerce/product/: admin.py  cache_keys.py  filters.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/e_commerce/user/: authentication.py  managers.py  models.py  utils.py
backend/e_commerce/users/: authentication.py  managers.py  validators.py
backend/e_commerce/wallet/: models.py
(+208 files in other folders)
