[tool.poetry]
name = "e-commerce backend"
version = "0.1.0"
description = ""
authors = ["Shervin Saeedi Borna <Shervinsaeedi78@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
djangorestframework = "^3.15.2"
django-redis = "^5.4.0"
django-filter = "^24.2"
djangorestframework-simplejwt = "^5.3.1"
django-ipware = "^7.0.1"
phonenumbers = "^8.13.29"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
redis = "^5.0.2"
pillow = "^10.3.0"
tqdm = "^4.66.4"
psycopg = {extras = ["binary"], version = "^3.1.19"}
mysqlclient = "^2.2.4"
django-extensions = "^3.2.3"
drf-spectacular = "^0.27.2"
celery = "^5.4.0"
pydantic = "^2.8.2"
zibal-client = "^0.3.0"
flower = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ecom_core.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--cov-config=.coveragerc --cov=."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"