[tool.poetry]
name = "e_commerce"
version = "0.1.0"
description = ""
authors = ["Shervin Saeedi Borna <Shervinsaeedi78@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include="e_commerce"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
djangorestframework = "^3.15.2"
django-redis = "^5.4.0"
django-filter = "^24.2"
djangorestframework-simplejwt = "^5.3.1"
django-ipware = "^7.0.1"
phonenumbers = "^8.13.29"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
redis = "^5.0.2"
pillow = "^10.3.0"
tqdm = "^4.66.4"
psycopg = {extras = ["binary"], version = "^3.1.19"}
mysqlclient = "^2.2.4"
django-extensions = "^3.2.3"
drf-spectacular = "^0.27.2"
celery = "^5.4.0"
pydantic = "^2.8.2"
zibal-client = "^0.3.0"
flower = "^2.0.1"
django-cors-headers = "^4.6.0"
djangorestframework-camel-case = "^1.4.2"
django-nested-admin = "^4.1.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"
pytest-mock = "^3.14.0"
mypy = "^1.15.0"
pyright = "^1.1.395"
django-stubs = "^5.1.3"
djangorestframework-stubs = "^3.15.3"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ecom_core.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--cov-config=.coveragerc --cov=."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
exclude = ["migrations", "tests"]

[tool.ruff]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501"]